# CosmosDoc

./: .gitignore  Cosmos信创能力范围.docx  Cosmos能力范围.docx  cosmos.rp  统一样式.md
higate/后台/cosmos_demo/: CMakeLists.txt  ReadMe.txt  main.cpp  rpc.proto  subcenter.proto
higate/客户端/: highgate.sln  highgate.vcxproj  文件夹说明.txt  测试报告.7z  第三方服务请求.md
higate/客户端/Cosmos.App.Hithink.ComDemo/: ComDemo.xaml  Config.json  Cosmos.App.Hithink.ComDemo.csproj  CosmosWebDemo.xaml  CosmosWebDemo.xaml.cs  Struct.cs  WpfComDemoGui.cs
higate/客户端/Cosmos.App.Hithink.ComDemo/resources/: index.html
higate/客户端/Cosmos.DataAccess.Trade/: Cosmos.DataAccess.Trade.csproj  README.md
higate/客户端/Cosmos.DataAccess.Trade.HighGate/: Cosmos.DataAccess.Trade.HighGate.csproj
higate/客户端/Cosmos.DataAccess.Trade.HighGate/Internals/: DataCenter.cs  LoginResult.cs  ReqType.cs
higate/客户端/Cosmos.DataAccess.Trade.HighGate/depends/: Cosmos.HighGate.nuspec
higate/客户端/Cosmos.DataAccess.Trade.HighGate/v1/: AIInferencer.cs  DataAccessor.cs  DataProvider.cs  DataSessionController.cs  DataSubscription.cs
higate/客户端/Cosmos.DataAccess.Trade/v1/: IAIInferencer.cs  IDataAccessor.cs  IDataSessionController.cs  IDataSubscription.cs  ITradeDataProvider.cs
higate/客户端/nupkg/: Cosmos.App.Sdk.0.0.63.nupkg  Cosmos.App.Sdk.Windows.0.0.63.nupkg  Cosmos.DataAccess.0.0.63.nupkg  Cosmos.DataAccess.Trade.0.0.63.nupkg  Cosmos.Observability.0.0.63.nupkg
higate/客户端/测试报告/: higate测试报告.xlsx  性能测试结果.xlsx
宿主接入/: Cosmos大核SDK接入文档.md
宿主接入/CosmosHost/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CCosmosHostApi.cpp  CCosmosHostApi.h  CMakeLists.txt  CMakePresets.json  CosmosHostDemo.sln  CosmosHostDemo.vcxproj  CosmosHostDemo.vcxproj.filters  ReadMe.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp  platform.cpp  platform.h
宿主接入/CosmosHost/include/: Cosmos.Product.Sdk.h
宿主接入/CosmosQtHost/: CMakeLists.txt  CosmosQtHost嵌入说明.md  MainWindow.cpp  MainWindow.h  main.cpp
组件接入/: Cosmos组件间通信.md  第三方服务请求.md  组件开发文档.md  组件调试说明文档.md
组件接入/Cosmos.App.Hithink.AvaloniaComDemo/: AvaloniaComDemoGui.cs  AvaloniaToast.cs  ComDemo.axaml  ComDemo.axaml.cs  Config.json  Cosmos.App.Hithink.AvaloniaComDemo.csproj  CosmosAppMetadata.xml  CosmosWebDemo.axaml  CosmosWebDemo.axaml.cs
组件接入/Cosmos.App.Hithink.AvaloniaComDemo/resources/: index.html
组件接入/Cosmos.App.Hithink.ComDemo/: ComDemo.xaml.cs  ComDemoProvider.cs  Cosmos.App.Hithink.ComDemo.csproj  CosmosAppMetadata.xml  WpfComDemoGui.cs  WpfToast.cs
组件接入/Cosmos.App.Hithink.Demo.Shared/: AccountInfo.cs  ComDemoProvider.cs  Config.cs  Cosmos.App.Hithink.Demo.Shared.projitems  Cosmos.App.Hithink.Demo.Shared.shproj  GetUserIdResponse.cs  JsRequest.cs  SetTextRequest.cs  Struct.cs  TextChange.cs
组件接入/接口文档/: Cosmos行情数据sdk.chm  cosmos组件sdk.chm
组件接入/组件开发包/: Cosmos.App.Sdk.1.0.8.nupkg  Cosmos.App.Sdk.1.0.9.nupkg  Cosmos.App.Sdk.Windows.1.0.8.nupkg  Cosmos.DataAccess.1.0.8.nupkg  Cosmos.DataAccess.Trade.1.0.8.nupkg  Cosmos.DataAccess.Trade.1.0.9.nupkg
组件接入/组件测试报告/: 组件性能测试结果.xlsx  组件通信测试结果.xlsx
组件接入/组件调试工具/: Cosmos.MockDebugger.App.sln  Directory.Build.props
组件接入/组件调试工具/Cosmos.MockDebugger.App/: Cosmos.MockDebugger.App.csproj  Debugger.cs  Program.cs
组件接入/组件调试工具/Cosmos.MockDebugger.App/Properties/: Settings.Designer.cs
组件接入/组件调试工具/Depends/: CefNet.Avalonia.1.0.9.nupkg  Cosmos.App.Sdk.Avalonia.1.0.9.nupkg  Cosmos.App.Sdk.Windows.1.0.9.nupkg  Cosmos.Communication.1.0.8.nupkg  Cosmos.Communication.1.0.9.nupkg  Cosmos.Communication.NamedPipe.1.0.8.nupkg  Cosmos.Communication.NamedPipe.1.0.9.nupkg  Cosmos.DataAccess.1.0.9.nupkg  Cosmos.DataAccess.Hevo.1.0.8.nupkg  Cosmos.DataAccess.Hevo.1.0.9.nupkg  Cosmos.DataAccess.Trade.HighGate.1.0.8.nupkg  Cosmos.DataAccess.Trade.HighGate.1.0.9.nupkg  Cosmos.DataVisualization.1.0.8.nupkg  Cosmos.DataVisualization.1.0.9.nupkg  Cosmos.Engine.1.0.8.nupkg  Cosmos.Engine.1.0.9.nupkg  Cosmos.Engine.Abstractions.1.0.8.nupkg  Cosmos.Engine.Abstractions.1.0.9.nupkg  Cosmos.Engine.Injections.1.0.8.nupkg  Cosmos.Engine.Injections.1.0.9.nupkg  Cosmos.Engine.NativeShim.1.0.8.nupkg  Cosmos.Engine.NativeShim.1.0.9.nupkg  Cosmos.Engine.Wpf.1.0.8.nupkg  Cosmos.Engine.Wpf.1.0.9.nupkg  Cosmos.FriendlyAccessor.1.0.8.nupkg  Cosmos.Gui.1.0.8.nupkg  Cosmos.Gui.1.0.9.nupkg  Cosmos.Gui.Avalonia.1.0.9.nupkg  Cosmos.Gui.Wpf.1.0.8.nupkg  Cosmos.Gui.Wpf.1.0.9.nupkg  Cosmos.MainApp.CrossPlatform.1.0.9.nupkg  Cosmos.Observability.1.0.0.nupkg  Cosmos.Observability.1.0.8.nupkg  Cosmos.Observability.1.0.9.nupkg  Cosmos.Pine.Sdk.1.0.8.nupkg  Cosmos.Pine.Sdk.1.0.9.nupkg  Cosmos.RpcClient.0.0.17.nupkg  Cosmos.Theme.Fluent.1.0.8.nupkg  Cosmos.Theme.Fluent.1.0.9.nupkg  Cosmos.WebViewFactory.CefNet.Avalonia.0.5.2.nupkg  (+3 more)
组件接入/进程间通信示例/: Cosmos-RPC通信SDK使用说明.md  Cosmos.RpcClient.Windows.0.0.14.nupkg
组件接入/进程间通信示例/组件示例/: ReadMe.txt
组件接入/进程间通信示例/组件示例/Cosmos.App.Hithink.AvaloniaProcessDemo/: AvaloniaProcessDemoGui.cs  Cosmos.App.Hithink.AvaloniaProcessDemo.csproj  CosmosAppMetadata.xml
组件接入/进程间通信示例/组件示例/Cosmos.App.Hithink.MfcProcessDemo/: Cosmos.App.Hithink.MfcProcessDemo.csproj  CosmosAppMetadata.xml  MfcProcessDemoGui.cs
组件接入/进程间通信示例/组件示例/Cosmos.App.Hithink.ProcessDemo.Shared/: Cosmos.App.Hithink.ProcessDemo.Shared.csproj  Cosmos.App.Hithink.ProcessDemo.Shared.projitems  Cosmos.App.Hithink.ProcessDemo.Shared.shproj  ProcessDemoGuiBase.cs
组件接入/进程间通信示例/组件示例/Cosmos.App.Hithink.QtProcessDemo/: Cosmos.App.Hithink.QtProcessDemo.csproj  CosmosAppMetadata.xml  QtProcessDemoGui.cs
组件接入/进程间通信示例/进程示例/: README.md  RpcClient.sln
组件接入/进程间通信示例/进程示例/PipeClient/: Build.md  CMakeLists.txt  PipeClient.cpp  PipeClient.h  PipeClient.vcxproj  PipeClient.vcxproj.filters  app.h  check_dependencies.sh  dllmain.cpp  framework.h
组件接入/进程间通信示例/进程示例/PipeClient/jsonCpp/: jsoncpp.cpp
组件接入/进程间通信示例/进程示例/PipeClient/nlohmann/detail/: json_pointer.hpp  macro_scope.hpp  macro_unscope.hpp
组件接入/进程间通信示例/进程示例/PipeClient/nlohmann/detail/conversions/: from_json.hpp  to_json.hpp
组件接入/进程间通信示例/进程示例/PipeClient/nlohmann/detail/input/: lexer.hpp
组件接入/进程间通信示例/进程示例/TestQt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
(+166 files in other folders)
